--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ h2 {
     gap: 3rem;
     flex-wrap: wrap;
     max-width: 1100px;
-    margin: 0 auto 3rem auto; /* espaço entre botões e rodapé */
+    margin: 0 auto 2rem auto; /* espaço entre botões e rodapé */
 }
 
 .column {
@@ -113,7 +113,7 @@ footer {
     .column {
         width: 48%;
         max-width: none;
-        gap: 0.5rem;
+        gap: 0.6rem;
     }
 
     .btn {
@@ -130,9 +130,9 @@ footer {
     }
 
     h2 {
-        font-size: 1.2rem;
+        font-size: 1.10rem;
         margin-top: 0.5rem;
-        margin-bottom: 1.2rem;
+        margin-bottom: 0.4rem;
     }
 
     .profile-pic {
@@ -157,4 +157,11 @@ footer {
         gap: 0.5rem;
     }
 }
-
+h4 {
+    color: #6faf7a;
+    font-weight: 600;
+    font-size: 1rem;
+    margin-top: 0.2rem;       /* reduz espaço acima do h4 */
+    margin-bottom: 0.6rem;    /* opcional: controle abaixo */
+    text-align: center;
+}
